[code] cde service revamp that idk
