# proto/CDEService.pb.gw.go
@@ -31,7 +31,7 @@ var _ = runtime.String
 var _ = utilities.NewDoubleArray
 var _ = descriptor.ForMessage
 
-func request_CDEService_Search_0(ctx context.Context, marshaler runtime.Marshaler, client CDEServiceClient, req *http.Request, pathParams map[string]string) (CDEService_SearchClient, runtime.ServerMetadata, error) {
+func request_CDEService_SearchStream_0(ctx context.Context, marshaler runtime.Marshaler, client CDEServiceClient, req *http.Request, pathParams map[string]string) (CDEService_SearchStreamClient, runtime.ServerMetadata, error) {
 	var protoReq SearchQuery
 	var metadata runtime.ServerMetadata
 
@@ -43,7 +43,7 @@ func request_CDEService_Search_0(ctx context.Context, marshaler runtime.Marshale
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	stream, err := client.Search(ctx, &protoReq)
+	stream, err := client.SearchStream(ctx, &protoReq)
 	if err != nil {
 		return nil, metadata, err
 	}
@@ -56,16 +56,70 @@ func request_CDEService_Search_0(ctx context.Context, marshaler runtime.Marshale
 
 }
 
+func request_CDEService_Search_0(ctx context.Context, marshaler runtime.Marshaler, client CDEServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq SearchQuery
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.Search(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_CDEService_Search_0(ctx context.Context, marshaler runtime.Marshaler, server CDEServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq SearchQuery
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.Search(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterCDEServiceHandlerServer registers the http handlers for service CDEService to "mux".
 // UnaryRPC     :call CDEServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
 func RegisterCDEServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux, server CDEServiceServer) error {
 
-	mux.Handle("POST", pattern_CDEService_Search_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_CDEService_SearchStream_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		err := status.Error(codes.Unimplemented, "streaming calls are not yet supported in the in-process transport")
 		_, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 		return
+	})
+
+	mux.Handle("POST", pattern_CDEService_Search_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_CDEService_Search_0(rctx, inboundMarshaler, server, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_CDEService_Search_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
 	})
 
 	return nil
@@ -109,6 +163,26 @@ func RegisterCDEServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn 
 // "CDEServiceClient" to call the correct interceptors.
 func RegisterCDEServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux, client CDEServiceClient) error {
 
+	mux.Handle("POST", pattern_CDEService_SearchStream_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_CDEService_SearchStream_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_CDEService_SearchStream_0(ctx, mux, outboundMarshaler, w, req, func() (proto.Message, error) { return resp.Recv() }, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("POST", pattern_CDEService_Search_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -125,7 +199,7 @@ func RegisterCDEServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux,
 			return
 		}
 
-		forward_CDEService_Search_0(ctx, mux, outboundMarshaler, w, req, func() (proto.Message, error) { return resp.Recv() }, mux.GetForwardResponseOptions()...)
+		forward_CDEService_Search_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -133,9 +207,13 @@ func RegisterCDEServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux,
 }
 
 var (
+	pattern_CDEService_SearchStream_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"searchStream"}, "", runtime.AssumeColonVerbOpt(true)))
+
 	pattern_CDEService_Search_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"search"}, "", runtime.AssumeColonVerbOpt(true)))
 )
 
 var (
-	forward_CDEService_Search_0 = runtime.ForwardResponseStream
+	forward_CDEService_SearchStream_0 = runtime.ForwardResponseStream
+
+	forward_CDEService_Search_0 = runtime.ForwardResponseMessage
 )
